--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   // https://nuxt.com/docs/guide/concepts/typescript
+  "compilerOptions": {
+    "types": ["node"]
+  },
   "files": [],
   "references": [
     {
@@ -14,6 +17,5 @@
     {
       "path": "./.nuxt/tsconfig.node.json"
     }
-  ],
-  "types": ["node"]
+  ]
 }
